<resources>
    <string name="app_name">Assignment Buddy</string>
    <string name="intro_title">Stay Connect and Engage Your Study with <font color="#6033ba">\n Assignment Buddy</font></string>
    <string name="intro_text">Browse the latest courses from the apps\nGet latest assignment details\nManage and Organize your studies</string>
    <string name="intro_button">Let\'s Get Started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_nav_assignment">Assignment</string>
    <string name="bottom_nav_notes">Notes</string>
    <string name="bottom_nav_subject">Subject</string>
    <string name="bottom_nav_task">Task</string>
    <string name="bottom_nav_home">Home</string>
    <string name="header">Header</string>
    <string name="content">Content</string>
    <string name="completed"><u>Completed</u></string>
    <string name="to_do_list"><u>To Do List</u></string>
    <string name="back">Back</string>
    <string name="description">Description</string>
    <string name="assignment_name">Assignment Name</string>
    <string name="due_date">Due Date : </string>
    <string name="sample_date">12-12-2002</string>
    <string name="sample_date_time">12-12-2002 12:00 PM</string>
    <string name="weightage">Weightage</string>
    <string name="deliverables">Deliverables</string>
    <string name="task">Task</string>
    <string name="subject_name">Subject Name</string>
    <string name="submit">Submit</string>
    <string name="description_underline"><u>Description</u></string>
    <string name="deliverables_underline"><u>Deliverables</u></string>
    <string name="create_new_task"><u>Create New Task</u></string>
    <string name="my_progress_count">%1$d out of %2$d Completed</string>
    <string name="studentCount">%1$d Students</string>
    <string name="creditHours">%1$d  Credits Hour</string>
    <string name="year">Year %1$d</string>
    <string name="subject_code">Subject Code</string>
</resources>