<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/assignmentFragment"
        android:enabled="true"
        android:icon="@drawable/assignment"
        android:title="@string/bottom_nav_assignment" />
    <item
        android:id="@+id/subjectListFragment"
        android:enabled="true"
        android:icon="@drawable/book"
        android:title="@string/bottom_nav_subject" />
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/bottom_nav_home" />
    <item
        android:id="@+id/taskFragment"
        android:enabled="true"
        android:icon="@drawable/task"
        android:title="@string/bottom_nav_task" />
    <item
        android:id="@+id/activityFragment"
        android:enabled="true"
        android:icon="@drawable/explorer"
        android:title="@string/bottom_nav_activity" />
</menu>