<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:id="@+id/loginScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/loginLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:elevation="10dp"
                android:contentDescription="logo"
                app:srcCompat="@drawable/group_7" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/intro_title"
                android:textAlignment="center"
                android:textSize="31sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:lineSpacingExtra="10dp"
                android:text="@string/intro_text"
                android:textAlignment="center"
                android:textColor="@color/grey" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/startBtn"
                style="@android:style/Widget.Button"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginVertical="32dp"
                android:background="@drawable/secondary_bg"
                android:minHeight="48dp"
                android:text="@string/intro_button"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>